Fail scheduling if task cannot be instantiated